src/objects/Awaiting_Bulk_Print__c.object
<CustomObject>
    <description>Table that holds a list of print jobs waiting to be printed from the bulk queue.  These records get deleted once a bulk print job is marked as successful.</description>
    <fields>
        <fullName>Batch_Form__c</fullName>
        <description>The type of form waiting to be bulk printed. test</description>
        <label>Batch Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCP Letter</fullName>
                </value>
                <value>
                    <fullName>Welcome Letter</fullName>
                </value>
                <value>
                    <fullName>Seminar Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lead record the print jobs is related to</description>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Awaiting Bulk Prints</relationshipLabel>
        <relationshipName>Awaiting_Bulk_Print_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who submitted the bulk print request</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awaiting_Bulk_Subu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Time the print job was submitted</description>
        <label>Submitted Time</label>
        <type>DateTime</type>
    </fields>
    <label>Awaiting Bulk Print</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead_Id__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>Submitted_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Batch_Form__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Automated_BCP_Job</fullName>
        <columns>NAME</columns>
        <columns>Batch_Form__c</columns>
        <columns>Lead_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>Submitted_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_By__c</field>
            <operation>equals</operation>
            <value>Chanida Clarkston</value>
        </filters>
        <label>Automated BCP Job</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Awaiting Bulk Print Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awaiting Bulk Prints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>